--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Assignment</title>
     <style>
-        #form {
+        #form,
+        #form2 {
             width: 50%;
             margin: 50px auto;
             padding: 5%;
@@ -21,6 +22,13 @@
         <input type="submit" onclick="signUp();" id="submit" name="Sign Up" value="Sign Up">
         <button type="submit" onclick="signIn();">Sign In</button>
         <h1 id="text"></h1>
+    </div>
+    <div id="form2">
+        <label for="userName">User Name <input type="text" id="userNameLogin" name="" value=""> </label><br><br>
+        <label for="userName"> Password <input type="password" id="userPassLogin" name="" value=""> </label><br><br>
+        <input type="submit" onclick="logIn();" id="submit" name="Login" value="Login">
+
+        <h1 id="loginText"></h1>
     </div>
 
     <script src="app.js"></script>
